# Prospeccao_CNAES

./: .gitignore  README.md  app.py  app_leads.py  atualizar_base.py  auto_atualizacao_n8n.py  diagnostico.py  extrator.py  pyproject.toml  requirements.txt  setup_banco.py  setup_banco_completo.py  test_import.py  update_cidades.py  utils_cnae.py
src/config/: __init__.py  scoring_config.py
src/database/: connection.py  crm_repository.py  estabelecimentos_repository.py  repository.py
src/models/: empresa_dto.py  lead.py  route.py
src/services/: excel_service.py  route_service.py  scoring_service.py
src/ui/: icons.py  tab_crm.py  tab_rota.py  tab_rota_new.py
tests/: __init__.py  test_route_service.py  test_scoring_service.py
